# hata

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  install.sh
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  auth.py  export.py  map.py  parser.py  properties.py  settings.py  users.py
backend/app/core/: __init__.py  deps.py  security.py
backend/app/models/: __init__.py  property.py  settings.py  user.py
backend/app/schemas/: __init__.py  parser.py  property.py  settings.py  user.py
backend/app/services/: __init__.py  excel_service.py  parser_service.py  pdf_service.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  export.ts  index.ts  parser.ts  properties.ts  settings.ts
frontend/src/components/Layout/: Layout.tsx  LoginDialog.tsx  index.ts
frontend/src/components/Map/: FilterPanel.tsx  PropertyMap.tsx  index.ts
frontend/src/components/Parser/: ParserLogs.tsx  ParserStatus.tsx  index.ts
frontend/src/pages/: MapPage.tsx  ParserPage.tsx  PropertyPage.tsx  SettingsPage.tsx  index.ts
frontend/src/store/: authStore.ts  index.ts  parserStore.ts  settingsStore.ts
frontend/src/theme/: theme.ts
frontend/src/types/: api.ts
